--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "husky": "^4.3.8",
     "typescript": "^4.1.2",
     "vite": "^2.0.0-beta.50"
   }
