--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "recoil": "^0.1.2",
     "sass": "^1.32.5"
   },
   "devDependencies": {
