chore(alias): module alias 설정을 위해 .eslintrc.js 및 vite.config.js 수정
- @, @assets, @components, @atoms, @molecules, @organisms, @pages, @store, @utils
- tsconfig 에도 alias 항목 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,21 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["/*"],
+      "@assets/*": ["assets/*"],
+      "@components": ["components"],
+      "@components/*": ["components/*"],
+      "@atoms/*": ["components/atoms/*"],
+      "@molecules/*": ["components/molecules/*"],
+      "@organisms/*": ["components/organisms/*"],
+      "@pages": ["pages"],
+      "@pages/*": ["pages/*"],
+      "@store/*": ["store/*"],
+      "@utils/*": ["utils/*"]
+    }
   },
   "include": ["./src"]
 }
