--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "recoil": "^0.1.2",
-    "sass": "^1.32.5"
+    "react-router-dom": "^5.2.0",
+    "recoil": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -37,6 +37,7 @@
     "@storybook/react": "^6.1.15",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@vitejs/plugin-react-refresh": "^1.1.0",
@@ -49,6 +50,7 @@
     "eslint-plugin-react": "^7.22.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
+    "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "typescript": "^4.1.2",
     "vite": "^2.0.0-beta.50"
