--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "your-voice",
   "version": "0.0.0",
   "scripts": {
+    "commit": "cz",
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
