refactor(cz-cli): commitizen confign 추가 및 husky로 pre-commit 시점에 cz가 실행되도록 함
https://github.com/commitizen/cz-cli

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "husky": {
     "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
@@ -21,6 +22,11 @@
     "src/**/*.{js,jsx,ts,tsx}": [
       "yarn lint"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "react": "^17.0.0",
