--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .ts,.tsx src",
     "lint-fix": "eslint --fix --ext .ts,.tsx src",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watchAll --coverage"
   },
   "husky": {
     "hooks": {
@@ -35,13 +36,17 @@
     "recoil": "^0.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@storybook/addon-actions": "^6.1.15",
     "@storybook/addon-essentials": "^6.1.15",
     "@storybook/addon-links": "^6.1.15",
     "@storybook/react": "^6.1.15",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
@@ -49,6 +54,8 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
@@ -56,7 +63,10 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "given2": "^2.1.7",
     "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-plugin-context": "^2.9.0",
     "lint-staged": "^10.5.3",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
