--- a/package.json
+++ b/package.json
@@ -68,6 +68,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-plugin-context": "^2.9.0",
     "lint-staged": "^10.5.3",
+    "postcss": "^8.2.6",
+    "postcss-load-config": "^3.0.1",
+    "postcss-loader": "^5.0.0",
+    "postcss-plugin": "^1.0.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "typescript": "^4.1.2",
