chore: 🤖 api directory alias 추가
jest.config.js, tsconfig.json, vite.config.js 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@pages": ["pages"],
       "@pages/*": ["pages/*"],
       "@store/*": ["store/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@api/*": ["api/*"]
     }
   },
   "include": ["./src"]
