--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
