--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "autoprefixer": "^10.2.4",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -69,8 +70,10 @@
     "jest-plugin-context": "^2.9.0",
     "lint-staged": "^10.5.3",
     "postcss": "^8.2.6",
+    "postcss-import": "^14.0.0",
     "postcss-load-config": "^3.0.1",
     "postcss-loader": "^5.0.0",
+    "postcss-nested": "^5.0.3",
     "postcss-plugin": "^1.0.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
