--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-core": "^7.0.0-0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "cssnano": "^4.1.10",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-import-resolver-typescript": "^2.3.0",
